<resources>
    <string name="app_name">Tour Assistant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_past_event">You do not complete any event yet!</string>
    <string name="no_running_events">Your do not have any running or up comming Event</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="uv_index">UV Index</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="wind_pressure_details">Wind pressure details</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="details">Details</string>
</resources>
